版本4:使用CodeFilter,去掉Servlet里面多余的代码

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -67,6 +67,10 @@
     <display-name>CodeFilter</display-name>
     <filter-name>CodeFilter</filter-name>
     <filter-class>com.cyzy.util.CodeFilter</filter-class>
+    <init-param>
+     <param-name>code</param-name>
+     <param-value>UTF-8</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
     <filter-name>CodeFilter</filter-name>
